changes to website

--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="index.css">
 <title>Shrey Mandalia</title>
 </head>
 <body>
-
-<h1>Shrey Mandalia</h1>
-<p>I am a Computer Science student studying at University of Pretoria</p>
-
+<article class="wrapper">
+<div id="title-div">
+<h2 class="title">Shrey Mandalia</h2> <br>
+</div>
+<div id="info-div">
+<p>
+    I am a Computer Science student studying at University of Pretoria <br>
+    I'm skilled in data structures, design patterns, Java, C++, HTML, CSS, JavaScript <br>
+    I enjoy programming and learning new things. I'm love gaming, playing/watching soccer, and occasionally reading.
+</p>
+</div>
+</article>
 </body>
 </html>
