--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p>
     I am a Computer Science student studying at University of Pretoria <br>
     I'm skilled in data structures, design patterns, Java, C++, HTML, CSS, JavaScript <br>
-    I enjoy programming and learning new things. I'm love gaming, playing/watching soccer, and occasionally reading.
+    I enjoy programming and learning new things. I love gaming, playing/watching soccer, and occasionally reading.
 </p>
 </div>
 </article>
